Add logging more details, make some refactoring code